# axon

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .makefile-help  ARCHITECTURE.md  AXON_AGENT_PLAN.md  BUG_FIXES_COMPLETE.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Cargo.toml  FIXES_SUMMARY.md  LICENCE  Makefile  Makefile.ros1  Makefile.ros2  README.md  REUSE.toml  ROADMAP.md  ROADMAP_ZH.md  codecov.yml  install.sh  package.xml  pr.md
apps/axon_agent/: CMakeLists.txt
apps/axon_agent/scripts/: agent_nicegui_panel.py
apps/axon_agent/src/: action_execution.cpp  action_execution.hpp  action_executor.cpp  action_executor.hpp  action_registry.cpp  action_registry.hpp  adapter_loader.cpp  adapter_loader.hpp  agent_service.cpp  agent_service.hpp  http_server.cpp  http_server.hpp  keystone_action_sync.cpp  keystone_action_sync.hpp  main.cpp  process_manager.cpp  process_manager.hpp  profile_manager.cpp  profile_manager.hpp  rpc_response.hpp
apps/axon_agent/test/: CMakeLists.txt  test_action_execution_state.cpp  test_action_executor.cpp  test_action_registry.cpp  test_agent_service.cpp  test_keystone_action_sync.cpp  test_process_manager.cpp
apps/axon_config/: CMakeLists.txt  README.md  axon_config.cpp  commands.cpp  commands.hpp  config_cache.cpp  config_cache.hpp  http_client.cpp  http_client.hpp
apps/axon_config/src/: main.cpp
apps/axon_config/test/: test_commands.cpp  test_config_cache.cpp  test_http_client.cpp  test_main.cpp
apps/axon_dispatcher/: CMakeLists.txt  axon.cpp  completion.bash
apps/axon_panel/: CMakeLists.txt  README.md  index.html  package-lock.json  package.json  run.sh  vite.config.js
apps/axon_panel/scripts/: embed_assets.sh
apps/axon_panel/server/: embedded_assets.cpp  embedded_assets.hpp  main.cpp  panel_api.cpp  panel_api.hpp
apps/axon_panel/src/: App.vue  edge-label-fix.css
apps/axon_panel/test/: test_panel_api.cpp
apps/axon_recorder/: CMakeLists.txt  axon_recorder.cpp  config_injector.cpp  config_injector.hpp  config_parser.cpp  config_parser.hpp  event_broadcaster.cpp  event_broadcaster.hpp  http_callback_client.cpp  http_callback_client.hpp  http_server.cpp  http_server.hpp  metadata_injector.cpp  metadata_injector.hpp  package.xml  plugin_example.cpp  plugin_loader.cpp  plugin_loader.hpp  recorder.cpp  recorder.hpp  recording_session.cpp  recording_session.hpp  spsc_queue.hpp  state_machine.cpp  state_machine.hpp  task_config.hpp  version.hpp.in  websocket_session.cpp  worker_thread_pool.cpp  worker_thread_pool.hpp
apps/axon_recorder/config/: README.md  default_config.yaml  default_config_hybrid.yaml  default_config_ros1.yaml  default_config_ros2.yaml  default_config_udp.yaml
apps/axon_recorder/src/: common_types.cpp  common_types.hpp  config_parser.cpp  config_parser.hpp  main.cpp  (+13 more)
apps/axon_system/: CMakeLists.txt  README.md
apps/axon_transfer/: CMakeLists.txt  README.md
apps/plugin_example/: CMakeLists.txt  plugin_loader_test.cpp  run_test_with_ros2_tools.sh  simple_load_test.cpp  test_with_ros2_tools.cpp
c/: Cargo.toml  README.md  build.rs  cbindgen.toml
c/src/: lib.rs
core/axon_logging/: CMakeLists.txt  axon_console_sink.cpp  axon_console_sink.hpp  axon_file_sink.cpp  axon_file_sink.hpp  axon_log_init.cpp  axon_log_init.hpp  axon_log_macros.hpp  axon_log_severity.hpp
core/axon_mcap/: CMakeLists.txt  async_mcap_writer.cpp  async_mcap_writer.hpp  mcap_validator.cpp  mcap_validator.hpp  mcap_validator_impl.hpp  mcap_validator_interfaces.hpp  mcap_validator_test_helpers.hpp  mcap_writer_wrapper.cpp  mcap_writer_wrapper.hpp
core/axon_memory/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.hpp
core/axon_uploader/: CMakeLists.txt  edge_uploader.cpp  edge_uploader.hpp  edge_uploader_test_helpers.hpp  retry_handler.hpp  s3_client.cpp  s3_client.hpp  s3_client_test_helpers.hpp  upload_queue.cpp  upload_queue.hpp  upload_state_manager.cpp  upload_state_manager.hpp  uploader_impl.hpp  uploader_interfaces.hpp
core/axon_utils/: CMakeLists.txt  README.md  common_types.cpp  common_types.hpp  config_parser.cpp  config_parser.hpp  http_client.cpp  http_client.hpp  recorder_service_interface.hpp  spsc_queue.hpp  state_machine.hpp  worker_thread_pool.cpp  worker_thread_pool.hpp
cpp/axon_arrow/: CMakeLists.txt  arrow_builder.cpp  arrow_builder.hpp  batch_manager.cpp  batch_manager.hpp  config_parser.cpp  message_converter.cpp  message_converter.hpp  message_introspection.cpp  message_introspection.hpp  schema_merger.cpp  schema_merger.hpp
cpp/axon_logging/: CMakeLists.txt  axon_console_sink.cpp  axon_console_sink.hpp  axon_file_sink.cpp  axon_file_sink.hpp  axon_log_init.cpp  axon_log_init.hpp  axon_log_macros.hpp  axon_log_severity.hpp
cpp/axon_mcap/: CMakeLists.txt  config_parser.cpp  config_parser.hpp  mcap_validator.cpp  mcap_validator.hpp  mcap_validator_impl.hpp  mcap_validator_interfaces.hpp  mcap_validator_test_helpers.hpp  mcap_writer_wrapper.cpp  mcap_writer_wrapper.hpp
cpp/axon_uploader/: CMakeLists.txt  COLCON_IGNORE  edge_uploader.cpp  edge_uploader.hpp  edge_uploader_test_helpers.hpp  retry_handler.hpp  s3_client.cpp  s3_client.hpp  s3_client_test_helpers.hpp  upload_queue.cpp  upload_queue.hpp  upload_state_manager.cpp  upload_state_manager.hpp  uploader_impl.hpp  uploader_interfaces.hpp
examples/: CMakeLists.txt  build.sh  plugin_interface.hpp  run_ros1.sh  run_ros2.sh  subscriber_test_unified.cpp  test_unified.sh
middlewares/: CMakeLists.txt  Makefile.ros2  README.md
middlewares/filters/: CMakeLists.txt
middlewares/mock/: CMakeLists.txt  test_e2e_with_mock.sh  test_full_workflow.sh
middlewares/ros1/: CMakeLists.txt  README.md  build.sh  clean.sh
middlewares/ros2/: CMakeLists.txt
middlewares/udp/: CMakeLists.txt
middlewares/zenoh/: CMakeLists.txt  package.xml
rust/: Cargo.toml  README.md
rust/axon_lance/: Cargo.toml
rust/src/: error.rs  lib.rs  runtime.rs  writer.rs
test/: CMakeLists.txt  README.md
test/cpp/: test_arrow_builder.cpp  test_batch_manager.cpp  test_config_parser.cpp
test/integration/: test_rust_bridge.sh
(+818 files in other folders)
