<?xml version="1.0"?>
<package format="3">
  <name>edge_lance_recorder</name>
  <version>0.1.0</version>
  <description>High-performance ROS recorder that writes data to Lance format using C++/Rust FFI bridge</description>
  
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>cmake</buildtool_depend>
  
  <!-- ROS 1 Dependencies -->
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">std_msgs</depend>
  <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  
  <!-- ROS 2 Dependencies -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rosidl_default_generators</depend>
  
  <!-- Build Dependencies -->
  <build_depend>yaml-cpp</build_depend>
  
  <!-- Runtime Dependencies -->
  <exec_depend>yaml-cpp</exec_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
